ToDo: ensured that words don't wrap onto a new line when the screen is resized

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,9 @@ button {
   animation-duration: .5s;
 }
 
+.word {
+  display: inline-block;
+}
 
 /* Keyboard */
 
